--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==4.0.6
 django-allauth==0.51.0
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 pip==22.1.2
